# nx-playground

./: .envrc  .npmrc  .vals.yaml  Cargo.toml  README.md  Tiltfile  ind.yaml  justfile  package.json
.cargo/: config.toml
.github/workflows/: ci-optimized.yml  publish-crates.yml  release.yml
apps/k8s-crd-groupers/: Cargo.toml  project.json
apps/k8s-crd-groupers/src/: lib.rs
apps/k8s-crd-groupers/static/: index.html
apps/matia/api/: Cargo.toml  Tiltfile  project.json
apps/matia/api/src/: config.rs  main.rs  openapi.rs  state.rs  types.rs
apps/matia/api/src/api/: catalog.rs  connectors.rs  issues.rs  lineage.rs  mod.rs  pipelines.rs  quality.rs
apps/matia/web/: Tiltfile  index.html  package.json  project.json  tsconfig.json  vite.config.ts
apps/terran/static-site/: package.json
apps/zerg/api/: Cargo.toml  project.json
apps/zerg/api/k8s/kustomize/base/: deployment.yaml
apps/zerg/api/k8s/kustomize/overlays/dev/: external-secret.yaml  kustomization.yaml
apps/zerg/api/k8s/kustomize/overlays/prod/: external-secret.yaml  kustomization.yaml
apps/zerg/api/src/: config.rs  main.rs  state.rs
apps/zerg/api/src/api/: mod.rs  tasks_async.rs  tasks_mongo.rs
apps/zerg/db-worker/: Cargo.toml  test.sh
apps/zerg/db-worker/k8s/kustomize/base/: deployment.yaml  kustomization.yaml  service.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/dev/influxdb/: kustomization.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/dev/mongo/: kustomization.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/dev/neo4j/: kustomization.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/dev/postgres/: kustomization.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/dev/qdrant/: kustomization.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/prod/influxdb/: kustomization.yaml  scaledobject.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/prod/mongo/: kustomization.yaml  scaledobject.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/prod/neo4j/: kustomization.yaml  scaledobject.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/prod/postgres/: kustomization.yaml  scaledobject.yaml
apps/zerg/db-worker/k8s/kustomize/overlays/prod/qdrant/: kustomization.yaml  scaledobject.yaml
apps/zerg/db-worker/src/: config.rs  lib.rs  main.rs  subscription.rs
apps/zerg/db-worker/src/handlers/: dapr_state.rs  influxdb.rs  mod.rs  neo4j.rs  qdrant.rs  tasks_mongo.rs  tasks_pg.rs
apps/zerg/e2e/: package.json  playwright.config.ts  project.json  tsconfig.json
apps/zerg/email-nats/: Cargo.toml  project.json
apps/zerg/email-nats/k8s/kustomize/base/: deployment.yaml
apps/zerg/email-nats/k8s/kustomize/overlays/dev/: kustomization.yaml  smtp.yaml
apps/zerg/email-nats/k8s/kustomize/overlays/prod/: kustomization.yaml
apps/zerg/email-nats/src/: lib.rs
apps/zerg/k6/: project.json
apps/zerg/tasks/: Cargo.toml  project.json
apps/zerg/tasks/k8s/bench/: ghz-create.yaml
apps/zerg/tasks/k8s/kustomize/base/: deployment.yaml
apps/zerg/tasks/k8s/kustomize/overlays/dev/: kustomization.yaml
apps/zerg/tasks/k8s/kustomize/overlays/prod/: kustomization.yaml
apps/zerg/tasks/src/: server.rs  service.rs
apps/zerg/tasks/tests/: grpc_perf_test.rs
apps/zerg/web/: package.json  project.json  vite.config.ts
clusters/: README.md
clusters/dev/paidevo-gke/: cluster-config.yaml  flux-root.yaml  inputs.yaml
clusters/dev/paidevo-local/: cluster-config.yaml  inputs.yaml
clusters/dev/yurikrupnik-gke/: cluster-config.yaml  inputs.yaml  kustomization.yaml
clusters/dev/yurikrupnik-local/: cluster-config.yaml  flux-root.yaml  inputs.yaml
docs/: db-schemas.md  matia-platform-plan.md  runtime-plan.md
kcl/: kcl.mod  main.k  schemas.k
libs/analytics/: Cargo.toml
libs/analytics/data/: customers.csv  deployments.csv  incidents.csv  integrations.json  pull_requests.csv  sales.csv
libs/analytics/examples/: dora_report.rs  sales_report.rs
libs/analytics/src/: bigquery.rs  catalog.rs  dora.rs  error.rs  ingest.rs  lib.rs  pipeline.rs  transform.rs
libs/core/config/: Cargo.toml
libs/core/config/src/: server.rs
libs/core/dapr/: Cargo.toml
libs/core/dapr/src/: client.rs  lib.rs  pubsub.rs  state.rs  subscription.rs
libs/database/: Cargo.toml
libs/database/src/: backend.rs  lib.rs
libs/database/src/common/: error.rs
libs/database/src/introspect/: mod.rs  sea_orm_impl.rs  sqlx_impl.rs
libs/database/src/mongo/: connector.rs  mod.rs
libs/database/src/postgres/: connector.rs
libs/database/src/redis/: connector.rs
libs/domains/cloud_resources/: Cargo.toml
libs/domains/projects/: Cargo.toml
libs/domains/tasks/: Cargo.toml
libs/domains/tasks/src/: conversions.rs  entity.rs  error.rs  lib.rs  models.rs  mongo.rs  postgres.rs  service.rs
libs/domains/tasks/src/handlers/: direct.rs
libs/domains/tasks/tests/: perf_test.rs
libs/domains/tasks/types/: Task.ts  UpdateTask.ts
libs/matia/api-client/: package.json  project.json  tsconfig.json
libs/matia/types/: package.json  project.json
libs/notifications/email/: Cargo.toml
libs/notifications/email/src/: lib.rs
libs/notifications/email/src/provider/: mod.rs  ses.rs
libs/testing/test-utils/: Cargo.toml
libs/testing/test-utils/src/: lib.rs  mongo.rs  postgres.rs
manifests/: infra-map.nuon
manifests/cnpg/base/: cluster.yaml  scheduled-backup.yaml
manifests/dapr/components/: pubsub-inmemory.yaml  pubsub-nats.yaml  pubsub-redis.yaml  statestore-mongo.yaml  statestore-postgres.yaml
manifests/dapr/subscriptions/: db-graph.yaml  db-tasks.yaml  db-timeseries.yaml  db-vectors.yaml
manifests/db/: db.just  schema.sql  seed.sql
manifests/db/migrations/: 20260313204028_initial.sql  20260424191816_initial.down.sql  20260424191816_initial.up.sql
manifests/dockers/: compose.yaml  python.Dockerfile
manifests/migrations/mydatabase/: atlas.sum
manifests/mprocs/: local.yaml  matia.yaml  zerg.yaml
manifests/schemas/: schema.sql  seed.sql
manifests/storage/: rustfs.yaml
scripts/kcl/cluster/: kcl.mod
scripts/kcl/crossplane/: config.k  gcs.k  kcl.mod  main.k  s3.k
scripts/nu/: cluster.nu  infra.nu  local-dev.nu  mod.nu
(+125 files in other folders)
