
[workspace]
resolver = '2'
members = [
    'apps/k8s-crd-groupers',
    'apps/matia/api',
    'apps/zerg/api',
    'apps/zerg/db-worker',
    'apps/zerg/email-nats',
    'apps/zerg/tasks',
    'libs/core/axum-helpers',
    'libs/core/config',
    'libs/core/dapr',
    'libs/core/field-selector',
    'libs/core/grpc',
    'libs/core/messaging',
    'libs/core/proc_macros',
    'libs/core/proc_macros/api_resource',
    'libs/core/proc_macros/sea_orm_resource',
    'libs/core/proc_macros/selectable_fields',
    'libs/analytics',
    'libs/database',
    'libs/domains/cloud_resources',
    'libs/domains/projects',
    'libs/domains/tasks',
    'libs/domains/users',
    'libs/domains/vector',
    'libs/notifications/email',
    'libs/rpc',
    'libs/testing/test-utils',
]

[workspace.dependencies]
api_resource = { path = 'libs/core/proc_macros/api_resource' }
argon2 = { version = '0.5.3', features = ['std'] }
aws-config = { version = '1', features = ['behavior-version-latest'] }
aws-sdk-sesv2 = '1.117.0'
async-nats = '0.47.0'
async-stream = '0.3.6'
async-trait = '0.1.89'
axum = { version = "0.8.8", features = ['default', 'tracing', 'ws'] }
axum-extra = { version = "0.12.5", features = ['typed-header'] }
axum-helpers = { path = 'libs/core/axum-helpers' }
chrono = { version = '0.4.44', features = ['serde'] }
clap = { version = '4.6.0', features = ['derive'] }
color-eyre = '0.6.5'
core_config = { path = 'libs/core/config' }
core_proc_macros = { path = 'libs/core/proc_macros' }
dapr-client = { path = 'libs/core/dapr' }
darling = '0.23.0'
database = { path = 'libs/database', default-features = false }
domain_cloud_resources = { path = 'libs/domains/cloud_resources' }
domain_projects = { path = 'libs/domains/projects' }
domain_users = { path = 'libs/domains/users' }
domain_vector = { path = 'libs/domains/vector' }
email = { path = 'libs/notifications/email' }
eyre = { version = '0.6.12', features = ['default'] }
influxdb2 = '0.5.2'
field-selector = { path = 'libs/core/field-selector' }
flagsmith = { version = '2.1.0', features = [] }
futures = "0.3.32"
grpc-client = { path = 'libs/core/grpc' }
handlebars = '6.4.0'
http = { version = '1.4.0' }
jsonwebtoken = { version = '10.3.0', features = ['aws_lc_rs'] }
k8s-openapi = { version = '0.27.1', features = ['v1_35'] }
kube = { version = '3.1.0', features = ['derive', 'runtime', 'rustls-tls', 'ring'] }
lettre = { version = '0.11.20', default-features = false, features = ['tokio1-rustls-tls', 'builder', 'smtp-transport', 'hostname'] }
messaging = { path = 'libs/core/messaging' }
metrics = '0.24.3'
metrics-exporter-prometheus = '0.18.1'
mockall = '0.14.0'
mongodb = '3.5.2'
neo4rs = '0.8'
oauth2 = '5.0.0'
pluralizer = '0.5.0'
proc-macro2 = "1.0.106"
prost = '0.14.3'
qdrant-client = "1.17.0"
quote = '1.0.45'
rand = "0.10.0"
redis = { version = "1.1.0", features = ['aio', 'r2d2', 'tokio-comp', 'connection-manager'] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ['json', 'rustls'], default-features = false }
rpc = { path = 'libs/rpc' }
schemars = "1.2.1"
sea-orm = { version = "2.0.0-rc.34", features = ['sqlx-postgres', 'runtime-tokio-rustls', 'macros', 'with-uuid', 'with-chrono', 'mock', 'debug-print', 'with-json'] }
sea-orm-migration = { version = "2.0.0-rc.34", features = ['sqlx-postgres', 'runtime-tokio-rustls'] }
sea_orm_resource = { path = 'libs/core/proc_macros/sea_orm_resource' }
selectable_fields = { path = 'libs/core/proc_macros/selectable_fields' }
serde = { version = '1.0.228', features = ['derive'] }
serde_json = { version = "1.0.149" }
sha2 = '0.11.0'
sqlx = { version = '0.8', default-features = false, features = ['postgres', 'macros', 'uuid', 'chrono', 'migrate'] }
strum = { version = '0.28.0', features = ['derive'] }
syn = { version = "2.0.117", features = ['full', 'extra-traits', 'visit'] }
test-utils = { path = 'libs/testing/test-utils' }
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ['postgres', 'mongo', 'redis'] }
thiserror = '2.0.18'
tokio = { version = "1.51.0", features = ['full'] }
tokio-stream = { version = '0.1.18', features = ['sync'] }
tonic = { version = "0.14.5", features = ['zstd'] }
tonic-health = "0.14.5"
tonic-prost = "0.14.5"
tower = '0.5.3'
tower-http = { version = '0.6.8', features = ['timeout', 'trace', 'compression-full', 'decompression-full', 'cors'] }
tracing = "0.1.44"
tracing-error = '0.2.1'
tracing-subscriber = { version = '0.3.23', features = ['env-filter', 'json', 'serde_json'] }
trybuild = "1.0.116"
ts-rs = { version = "12.0.1", features = ["chrono-impl", "uuid-impl"] }
utoipa = { version = '5.4.0', features = ['axum_extras', 'chrono', 'uuid'] }
utoipa-rapidoc = { version = '6.0.0', features = ['axum'] }
utoipa-redoc = { version = '6.0.0', features = ['axum'] }
utoipa-scalar = { version = '0.3.0', features = ['axum'] }
utoipa-swagger-ui = { version = '9.0.2', features = ['axum'] }
uuid = { version = "1.23.0", features = ['serde', 'v4', 'v7'] }
validator = { version = '0.20.0', features = ['derive'] }

[profile.dev]
incremental = true
codegen-units = 16 # Parallel compilation
opt-level = 0 # No optimization for speed

[profile.dev.build-override]
opt-level = 3 # Optimize proc macros and build scripts for faster execution

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
panic = 'abort'
incremental = false # Explicit: LTO doesn't benefit from incremental
