[package]
name = "k8s-crd-groupers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "crd-grouper-api"
path = "src/bin/api.rs"

[[bin]]
name = "crd-grouper-cli"
path = "src/bin/cli.rs"
