[package]
name = "analytics"
version = "0.1.0"
edition = "2024"
description = "Data analytics engine powered by Polars — mini Matia-like data platform"
license = "MIT"

[features]
default = ["csv", "json", "parquet"]
csv = ["polars/csv"]
json = ["polars/json", "polars/serde"]
parquet = ["polars/parquet"]
sql = ["dep:polars-sql"]
streaming = ["polars/streaming"]
cloud = ["polars/cloud"]
all = ["csv", "json", "parquet", "sql", "streaming"]

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
polars = { version = "0.46", features = [
    "lazy",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "dtype-struct",
    "round_series",
    "rank",
    "describe",
    "pivot",
    "concat_str",
    "strings",
    "temporal",
    "is_in",
    "abs",
    "cum_agg",
    "log",
    "dynamic_group_by",
] }
polars-sql = { version = "0.46", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
