[package]
name = "matia_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-helpers = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
core_config = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
