[package]
name = "zerg_email_nats"
version = "0.1.1"
edition = "2021"
description = "Email worker service using NATS JetStream"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zerg_email_nats"
path = "src/main.rs"

[dependencies]
# NATS client
async-nats = { workspace = true }

# HTTP server for health
axum = { workspace = true }

# Core configuration
core_config = { workspace = true }

# Email library (with NATS support and both providers)
email = { workspace = true, features = ["smtp", "sendgrid"] }

# Error handling
eyre = { workspace = true }

# Messaging with NATS support
messaging = { workspace = true, features = ["nats"] }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }

# Observability
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[example]]
name = "publish_test"
path = "examples/publish_test.rs"
