[package]
name = "core_config"
version = "0.1.0"
edition = "2024"
description = "Core configuration and tracing setup utilities"
license = "MIT"
repository = "https://github.com/yurikrupnik/nx-playground"

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
temp-env = "0.3"
