[package]
name = "dapr-client"
version = "0.1.0"
edition = "2024"
description = "Dapr sidecar client library for pub/sub, state stores, and subscription handling"
license = "MIT"

[dependencies]
axum = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
