[package]
name = "domain_projects"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-helpers = { workspace = true }
chrono = { workspace = true }
core_proc_macros = { workspace = true, features = ["sea_orm_resource"] }
database = { workspace = true, features = ["postgres", "redis"] }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
http-body-util = "0.1"
mockall = { workspace = true }
serde_json = { workspace = true }
test-utils = { workspace = true }
tower = { workspace = true }
