[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["postgres"]
postgres = ["dep:sea-orm"]
redis = ["dep:redis"]
mongo = ["dep:mongodb"]
nats = ["dep:async-nats", "dep:futures"]
all = ["postgres", "redis", "mongo", "nats"]

[dependencies]
# NATS dependencies (optional)
async-nats = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# MongoDB dependencies (optional)
mongodb = { workspace = true, optional = true }

# Redis dependencies (optional)
redis = { workspace = true, optional = true }

# Postgres dependencies (optional, enabled by default)
# Note: Uses Atlas SQL migrations from manifests/db/migrations/
sea-orm = { workspace = true, optional = true }

# Testcontainers (always available)
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "redis", "mongo", "nats"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
